# Scribe

./: .gitignore  CMakeLists.txt  Config.cmake.in  README.md
helper_scripts/: arch_win32_run_tests.sh
modules/: CMakeLists.txt
modules/buffered_file/: BufferedFile.c++  BufferedFile.h++  CMakeLists.txt
modules/config_file/: CMakeLists.txt  ConfigFile.c++  ConfigFile.h++
modules/file/: CMakeLists.txt  File.c++  File.h++
modules/tempfile/: CMakeLists.txt  TempFile.c++  TempFile.h++  readme.md
test/: BufferedFileTest.c++  CMakeLists.txt  ConfigFileTest.c++  FileTest.c++  TempFileTest.c++
toolchains/: arch_windows.toolchain
